[package]
name = "async-timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
once_cell = "1.17.0"


[dev-dependencies]
async-std = {version = "1.11.0", features = ["attributes", "default"]}
pretty_env_logger = "0.4.0"